updated accountancy services

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -43,10 +43,27 @@
           <h2>that specializes in:</h2>
           <select class="profession" >
             <!-- <option>Choose one...</option> -->
-            <option>Immigration</option>
+			<option>All Services</option>
+			<option>Audit Services</option>
+		    <option>Bookkeeping</option>
+		    <option>Budgeting and Planning</option>
+		    <option>Business Accounting Services</option>
+			<option>Business Financial Planning</option>
+			<option>Business Tax Returns</option>
+		    <option>Cash Flow Analysis</option>
+		    <option>CFO Services</option>
+		    <option>Controller Services</option>
+			<option>Employee Benefits</option>
+		    <option>Estate Planning</option>
+		    <option>Forecasting and Projections</option>
+			<option>Forensic accountants</option>
+			<option>Individual Accounting Services</option>
+			<option>Individual Tax Returns</option>
+		    <option>Payroll Tax Services</option>
+			<option>Taxation professional</option>
           </select>
         </div>
-        
+
         <hr>
         
         <div class="input-holder">
