--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
   <div class="main-container">
     
     <div class="home-search-holder">
-      <h1 class="tagline">Find and book local professionals</h1>
+      <h1 >Discover local professionals</h1>
       <a id="how-works-link-mobile" href="#how-works">How it works</a>
       <div class="search-panel">
         
