--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -223,7 +223,7 @@ nav a:hover {
    ============== */
 
 .home-search-holder { width: 100%; max-width: 1900px; height: 600px; background: url(<%= asset_path 'home-bg.jpg' %>) center center no-repeat; background-size: cover; padding: 100px 0 0; }
-.home-search-holder h1 { width: 420px; margin: 0 auto 40px; color: white; text-shadow: 0px 1px 2px black; position: relative; left: -100px; font-size: 2.4em; line-height: 1.1em;  }
+.home-search-holder h1 { width: 520px; margin: 50px auto 40px; color: white; text-shadow: 0px 1px 2px black; position: relative; left: -50px; font-size: 2.4em; line-height: 1.1em;  }
 .search-panel { background: rgba(255,255,255,0.86); width: 620px; margin: 0 auto; box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.5); padding: 10px 0 18px; }
 
 .search-panel h2 { margin: 0 0 0.4em; font-weight: normal; color: #464646; }
