--- a/app/views/register/step3.html.erb
+++ b/app/views/register/step3.html.erb
@@ -98,7 +98,7 @@
 <footer>
   <a href="/register2" class="previous btn-gray-med">Previous</a>
   <a href="#" class="submit btn-blue">Next</a>
-  <a href="/register4" class="skip btn-gray-med">Skip this step</a>
+  <a href="/profile/private" class="skip btn-gray-med">Skip this step</a>
   <div class="clearfix"></div>
 </footer>
 <% end %>
