Handle company website url by prefixing scheme before validation

--- a/app/views/profile/private.html.erb
+++ b/app/views/profile/private.html.erb
@@ -9,7 +9,7 @@
       	<h2>Private Investigator [TODO]</h2>
       	<div class="rating stars-4"></div><span class="num-ratings">(5)</span>
 	<div class="address">
-	  <a class="website" href="#"><%= @user.company_name%><b class="external-link"></b></a>
+	  <a class="website" href="<%=@user.company_website%>"><%= @user.company_name%><b class="external-link"></b></a>
 	  <span class="street"><%= @user.company_address%></span>
           <a class="map-link" href="https://www.google.com/maps/preview#!q=Flatiron+Building%2C+5th+Avenue%2C+New+York%2C+NY&data=!4m15!2m14!1m13!1s0x89c259a3f71c1f67%3A0xde2a6125ed704926!3m8!1m3!1d403324!2d-73.979681!3d40.6974881!3m2!1i997!2i800!4f13.1!4m2!3d40.741026!4d-73.989781">Map</a>
 	</div>
