Login form says Email instead of Username

--- a/app/views/profile/login.html.erb
+++ b/app/views/profile/login.html.erb
@@ -9,7 +9,7 @@
       <fieldset>
         <div class="col-wide">
 
-          <legend>Username</legend> 
+          <legend>Email</legend> 
           <%= f.text_field :email %><br />
 
           <legend>Password</legend>
