--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
     <%= yield %>                
 
-    <%= render :partial => "layouts/footer" %>
+    <%= render :partial => "layouts/footer" unless (controller_name != :search)%>
     
     <%= yield :register_photo if content_for? :register_photo %>
     
