--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!DOCTYPE html> 
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" <%= 'ng-app="searchApp"'.html_safe if controller_name = :search %>> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" <%= 'ng-app="searchApp"'.html_safe if controller_name = :search %>> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" <%= 'ng-app="searchApp"'.html_safe if controller_name = :search %>> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" <%= 'ng-app="searchApp"'.html_safe if controller_name = :search %>> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -25,7 +25,7 @@
 
     <%= yield %>                
 
-    <%= render :partial => "layouts/footer" unless (controller_name != :search)%>
+    <%= render :partial => "layouts/footer" unless (controller_name != 'search')%>
     
     <%= yield :register_photo if content_for? :register_photo %>
     
