--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,57 +1,51 @@
 <% content_for :search_filter_bar do %>
-<div class="filter-bar">
-  <div class="search-fields-summary">
-    <p><strong class="profession">Lawyers</strong> specializing in <strong class="specialty">Immigration</strong> in <strong class="location">New York, NY</strong></p>
-  </div>
-  <div class="search-fields-holder">
-    <div class="profession-holder col">
-      <select class="profession">
-	<option>Lawyer</option>
-      </select>
-    </div>
-    <div class="specialty-holder col">
-      <span class="label">specializing in</span>
-      <div class="select-holder">
-	<select class="specialty">
-	  <option>Immigration</option>
+  <div class="filter-bar" ng-controller="SearchFilterBarController">
+    <div class="search-fields-holder">
+      <div class="profession-holder col">
+	<select class="profession" ng-name="current_profession" ng-model="current_profession" ng-change="change_profession(opt)" ng-options="profession.name for profession in professions">
 	</select>
       </div>
-    </div>
-    <div class="location-holder col">
-      <span class="label">in</span>
-      <div class="input-holder">
-	<input type="text" value="New York, NY">
+      <div class="specialty-holder col">
+	<span class="label">specializing in</span>
+	<div class="select-holder">
+	  <select class="speciality" ng-name="current_speciality" ng-model="current_speciality" ng-change="change_speciality(opt)" ng-options="speciality.name for speciality in specialities">
+	  </select>
+	</div>
+      </div>
+      <div class="location-holder col">
+	<span class="label">in</span>
+	<div class="input-holder">
+	  <input ng-name="current_city" ng-model="current_city" ng-change="change_city(opt)" type="text">
+	</div>
       </div>
     </div>
-  </div>
-  <a href="#" class="more-filters" >More filters</a>
-  <div class="clearfix"></div>
-  <div class="filter-menu">
-    <section class="rating">
-      <h4>Minimum rating</h4>
-      <div id="raty"></div>
-    </section>
-    <section>
-      <a href="#" class="submit btn-blue">Submit</a>
-    </section>
-  </div>
-</div>
-<% end %>
-
-</div>
-
-<div class="view-toggle-bar">
-  <div class="inner">
-    <span>View as:</span>
-    <div class="tabs">
-      <a href="#" class="list-view active">List</a><a href="#" class="map-view">Map</a>
+    <a href="#" class="more-filters" >More filters</a>
+    <div class="clearfix"></div>
+    <div class="filter-menu">
+      <section class="rating">
+	<h4>Minimum rating</h4>
+	<div id="raty"></div>
+      </section>
+      <section>
+	<a href="#" class="submit btn-blue">Submit</a>
+      </section>
     </div>
   </div>
-</div>
+<% end %>
 
-<div class="results">
+<div class="results" ng-controller="SearchListController">
   <ol>
-    <%= render :partial => "search/result", collection: @results %>
+    <li ng-repeat="result in results">
+      <img ng-src="{{result.avatar_url}}" height="100" width="100">
+      <div class="col">
+	<b class="rank"> {{result.rank}}</b>
+	<h2><a href="{{result.profile_url}}">{{result.fullname}}</a></h2>
+	<p class="specialty">{{result.speciality}}</p>
+	<p class="company">{{result.company_name}}</p>
+	<div class="rating stars-{{result.average_rating}}"></div><span class="num-ratings">({{result.num_reviews}})</span>
+      </div>
+      <div class="clearfix"></div>
+    </li>
   </ol>
 </div>
 
