--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  *= require normalize
- *= require minimalect
+ *= require jquery.minimalect
  *= require caroufredsel
  *= require main
 
