--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,12 +12,12 @@
  *
 
  *= require normalize
- *= require minimalect
+ *= require jquery.minimalect
  *= require caroufredsel
  *= require main
  *= require jcarousel-skins/tango/skin.css
  *= require jquery.Jcrop.css
- *= require jquery.ui.datepicker
+ *= require jquery.ui.all
 
  *= require_self
  */
