--- a/app/assets/stylesheets/jquery.minimalect.css
+++ b/app/assets/stylesheets/jquery.minimalect.css
@@ -1,65 +1,114 @@
+/************************************
+          MINIMALECT 0.9
+  A minimalistic select replacement
+
+ jQuery 1.7+ required.
+ Developed by @groenroos
+ http://www.groenroos.fi
+
+ Github: http://git.io/Xedg9w
+
+ Licensed under the MIT license.
+
+************************************/
 .minict_wrapper {
- 
+  font-family: "Segoe UI", Segoe, "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
   color: #333;
   background: #fff;
   position: relative;
-  width: 100%;
-  height: 2.1rem;
-  border: 1px solid #ccc;
+  width: 300px;
+  height: 35px;
+  height: 2.2rem;
+  border: 1px solid #e5e5e5;
+  border-radius: 3px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-   }
+  box-sizing: border-box; }
   .minict_wrapper * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
-  .minict_wrapper:before {}
+  .minict_wrapper.disabled {
+    background: #f5f5f5;
+    text-shadow: 0 1px 0 #fff; }
+    .minict_wrapper.disabled span {
+      color: #bbb !important; }
   .minict_wrapper:after {
-    content: "\e004";
-    font-family: icomoon;
+    content: "\25BC";
     display: block;
     position: absolute;
+    height: 33px;
+    width: 33px;
     height: 2.1rem;
     width: 2.1rem;
     top: 0;
     right: 0;
-    font-size: 0.5rem;
-    line-height: 4em;
+    font-size: 10px;
+    font-size: 0.6rem;
+    line-height: 32px;
+    line-height: 1.9rem;
     text-align: center;
     color: #555; }
   .minict_wrapper.active:after {
-    content: "\e005"; }
-  .minict_wrapper input {
+    content: "\25B2"; }
+  .minict_wrapper.disabled:after {
+    color: #bbb; }
+  .minict_wrapper span {
+    display: block;
     border: 0;
     outline: none;
     background: none;
+    font-family: "Segoe UI", Segoe, "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
     color: #333;
+    font-size: 16px;
     font-size: 1rem;
-    height: 1.9rem;
-    padding: 0 2.2rem 0 0.4rem;
+    height: 32px;
+    height: 2.0rem;
+    line-height: 23px;
+    line-height: 1.5rem;
+    padding: 4px 53px 0 6px;
+    padding: 4px 3.4rem 0 0.4rem;
     cursor: default;
-    width: 100%; }
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+    .minict_wrapper span:empty:before {
+      content: attr(data-placeholder);
+      color: #ccc;
+      line-height: 23px;
+      line-height: 1.5rem; }
   .minict_wrapper ul {
     display: none;
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 -1px;
     position: absolute;
     width: 100%;
-    border: 1px solid #ccc;
-    top: 2rem;
+    width: -webkit-calc(100% + 2px);
+    width: -moz-calc(100% + 2px);
+    width: calc(100% + 2px);
+    border: 1px solid #e5e5e5;
+    border-top: 1px solid #f9f9f9;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    top: 33px;
+    top: 2.0rem;
     left: 0;
+    max-height: 350px;
     max-height: 22rem;
     overflow-y: auto;
     z-index: 999999; }
     .minict_wrapper ul li {
       list-style: none;
       font-size: 1rem;
+      padding: 0 10px;
       padding: 0 0.7rem;
       cursor: pointer;
       background: #fff;
+      height: 35px;
       height: 2.2rem;
+      line-height: 32px;
       line-height: 2rem; }
       .minict_wrapper ul li:hover {
         background: #fcfcfc;
@@ -74,21 +123,54 @@
         background: #fff !important;
         color: #bbb;
         text-align: center;
+        font-size: 14px;
         font-size: 0.9rem;
+        height: 55px;
         height: 3.5rem;
+        line-height: 50px;
         line-height: 3.3rem; }
+      .minict_wrapper ul li.disabled {
+        cursor: default;
+        background: #fff !important;
+        color: #bbb; }
       .minict_wrapper ul li.selected {
         color: #819a9a;
-        background: #f9fcff; }
+        background: #f8f9f9; }
       .minict_wrapper ul li.highlighted {
         color: #fff;
         background: #819a9a; }
       .minict_wrapper ul li.hidden {
         display: none; }
+  .minict_wrapper .minict_reset {
+    color: #A9A9A9;
+    bottom: 0;
+    display: none;
+    font-size: 18px;
+    font-size: 1.1rem;
+    line-height: 30px;
+    line-height: 1.9rem;
+    position: absolute;
+    right: 35px;
+    right: 2.2rem;
+    text-align: center;
+    top: 0;
+    text-decoration: none;
+    width: 20px;
+    width: 1.2rem;
+    -webkit-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out; }
+    .minict_wrapper .minict_reset:hover {
+      color: #e0e0e0;
+      -webkit-transition: all 0.15s ease-in-out;
+      transition: all 0.15s ease-in-out; }
+    .minict_wrapper .minict_reset:active {
+      color: #636363; }
+  .minict_wrapper.disabled .minict_reset {
+    display: none; }
 
 .minict_wrapper.bubble {
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.05);
   background: -moz-linear-gradient(top, white 0%, #f9f9f9 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, #f9f9f9));
   background: -webkit-linear-gradient(top, white 0%, #f9f9f9 100%);
@@ -98,7 +180,7 @@
   .minict_wrapper.bubble:hover {
     border-color: #dcdcdc; }
   .minict_wrapper.bubble:after {
-    border-left: 1px solid #ccc;
+    border-left: 1px solid #e5e5e5;
     -webkit-box-shadow: inset 1px 0px 0px 0px #fff;
     box-shadow: inset 1px 0px 0px 0px #fff;
     height: 2.05rem; }
@@ -106,6 +188,7 @@
     top: 2.7rem;
     -webkit-box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.25);
     box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
     overflow: visible; }
     .minict_wrapper.bubble ul:before {
       position: absolute;
@@ -130,6 +213,10 @@
       border-width: 0 10px 10px 10px;
       border-color: transparent transparent #ffffff transparent; }
     .minict_wrapper.bubble ul li.minict_first {
-       }
+      border-top-left-radius: 6px;
+      border-top-right-radius: 6px; }
     .minict_wrapper.bubble ul li.minict_last {
-       }
+      border-bottom-left-radius: 6px;
+      border-bottom-right-radius: 6px; }
+  .minict_wrapper.bubble .minict_reset {
+    width: 30px; }
